<resources>
    <string name="app_name">Honours Project</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loginTitle">Welcome to my app!</string>
    <string name="signupTitle">Sign Up!</string>
    <string name="loginPrompt">Enter your username and password to Login.</string>
    <string name="signupPrompt">Enter your username and password to Sign Up.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="login">Login</string>
    <string name="loginToSignUp">Don\'t have an account?</string>
    <string name="signupToLogin">Already have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome!</string>
    <string name="gpsButton">GPS</string>
    <string name="photoDescription">User Selected Image</string>
    <string name="selectPhoto">Select Photo</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_tab">InstaMap</string>
    <string name="tab_feed">Feed</string>
    <string name="tab_post">Post</string>
    <string name="tab_map">Map</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
