<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.calum.honoursproject.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/signupTitle"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/signupPrompt"
        android:id="@+id/textView5"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/usernameText"
        android:layout_alignEnd="@+id/password1Text" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameText"
        android:hint="@string/username"
        android:layout_above="@+id/password1Text"
        android:layout_alignStart="@+id/password1Text"
        android:layout_alignEnd="@+id/password1Text"
        android:lines="1"
        android:linksClickable="true"
        android:singleLine="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password1Text"
        android:hint="@string/password"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/password2Text"
        android:singleLine="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password2Text"
        android:hint="@string/repeatPassword"
        android:layout_below="@+id/password1Text"
        android:layout_centerHorizontal="true"
        android:longClickable="false"
        android:singleLine="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:id="@+id/signUpButton"
        android:layout_below="@+id/password2Text"
        android:layout_alignEnd="@+id/password2Text"
        android:layout_alignStart="@+id/password2Text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/signupToLogin"
        android:id="@+id/textView6"
        android:layout_above="@+id/loginButton"
        android:layout_alignEnd="@+id/signUpButton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
