<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.calum.honoursproject.HomeActivity">

    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/welcomeText"
        android:elegantTextHeight="false"
        android:textSize="50sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/logoutButton"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/gpsButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gpsButton"
        android:id="@+id/gpsButton"
        android:layout_above="@+id/logoutButton"
        android:layout_alignStart="@+id/welcomeText"
        android:layout_alignEnd="@+id/welcomeText" />

    <ImageView
        android:layout_width="640dp"
        android:layout_height="640dp"
        android:scaleType="centerCrop"
        android:id="@+id/imageView"
        android:src="@mipmap/ic_camera"
        android:contentDescription="@string/photoDescription"
        android:layout_gravity="center"
        android:layout_below="@+id/welcomeText"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:layout_above="@+id/selectPhotoButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectPhoto"
        android:id="@+id/selectPhotoButton"
        android:layout_above="@+id/gpsButton"
        android:layout_alignStart="@+id/gpsButton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Post"
        android:id="@+id/postButton"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/gpsButton"
        android:layout_toEndOf="@+id/logoutButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MAP"
        android:id="@+id/mapButton"
        android:layout_above="@+id/gpsButton"
        android:layout_toEndOf="@+id/selectPhotoButton" />

</RelativeLayout>
